# gst-dektec

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
src/: gstdtapi.c  gstdtapisink.cpp  gstdtapisink.h
